Ignore p.p which I often use to write a temporary patch.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "horde-release"]
 	path = horde-release
 	url = git@github.com:wrobel/horde-release.git
+[submodule "kolab-cvs"]
+	path = kolab-cvs
+	url = git://github.com/wrobel/kolab-cvs.git
