Adapt to new pear directory layout and provide a method to create the correct .pearrc configuration for the current install location.

--- a/php.ini
+++ b/php.ini
@@ -1,4 +1,4 @@
-include_path = ".:./lib:./pear:./horde-release/horde-webmail/pear:/usr/share/php5:/usr/share/php"
+include_path = ".:./lib:./pear/php:./horde-release/horde-webmail/pear:/usr/share/php5:/usr/share/php"
 error_log = "./log/php-errors.log"
 log_errors = On
 error_reporting  =  E_ALL
