--- a/php.ini
+++ b/php.ini
@@ -3,6 +3,8 @@ error_log = "./log/php-errors.log"
 log_errors = On
 error_reporting  =  E_ALL
 
+date.timezone = Europe/Berlin
+
 xdebug.remote_autostart="1"
 xdebug.profiler_output_dir="./tmp"
 xdebug.trace_output_dir="./tmp"
